# workshop

./: .gitignore  .travis.yml  404.html  404error.html  CMakeLists.txt  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README  README.rst  REQUIREMENTS.txt  Readme.md  Vagrantfile  boost_example.rst  conf.py  index.html  index.rst  ja-index.html  latex.html  make.bat  objects.inv  run.sh  search.html  searchindex.js  transifex.yml
docs/: .conf.py.swp  CMakeLists.txt  Makefile  README  Readme.md  about.rst  advanced.rst  checkout.sh  conf.py  geoext_client.rst  index.rst  installation.rst  introduction.rst  latex.rst  osm2pgrouting.rst  php_server.rst  shortest_path.rst  topology.rst
docs/.tx/: config
docs/_build/doctrees/: about.doctree  advanced.doctree  environment.pickle  geoext_client.doctree  index.doctree  installation.doctree  introduction.doctree  latex.doctree  license.doctree  osm2pgrouting.doctree  php_server.doctree  shortest_path.doctree  topology.doctree
docs/_build/html/: .buildinfo  about.html  advanced.html  genindex-all.html  genindex.html  geoext_client.html  index.html  installation.html  introduction.html  latex.html  objects.inv  osm2pgrouting.html  php_server.html  search.html  searchindex.js  shortest_path.html  topology.html
docs/_build/latex/: modpgRoutingWorkshop.ilg  pgRoutingWorkshop.aux  pgRoutingWorkshop.idx  pgRoutingWorkshop.ilg  pgRoutingWorkshop.ind  pgRoutingWorkshop.out  pgRoutingWorkshop.tex  pgRoutingWorkshop.toc
docs/_static/: custom.css
docs/_templates/: layout.html
docs/advanced/: CMakeLists.txt  chapter-12.rst
docs/appendix/: CMakeLists.txt  appendix-1.rst  appendix-2.rst  appendix-3.rst
docs/appendix/code/: CMakeLists.txt
docs/basic/: CMakeLists.txt  appendix.rst  chapter-4.rst  chapter-5.rst  chapter-6.rst  chapter-7.rst  chapter-8.rst  data.rst  graph_views.rst  graphs.rst  pedestrian.rst  plpgsql_function.rst  sql_function.rst  vehicle.rst
docs/basic/images/: CMakeLists.txt
docs/chapters/: 2-about.rst  3-installation.rst  4-topology.rst  5-shortest_path.rst  6-osm2pgrouting.rst  CMakeLists.txt  about.rst  advanced.rst  appendix-1.rst  appendix-3.rst  chapter-1.rst  chapter-10.rst  chapter-12.rst  chapter-2.rst  chapter-3.rst  chapter-4.rst  chapter-5.rst  chapter-6.rst  chapter-7.rst  chapter-8.rst  geoext_client.rst  geoserver.rst  installation.rst  introduction.rst  ol3_client.rst  osm2pgrouting.rst  php_server.rst  shortest_path.rst  the_solutions.rst  topology.rst  wrapper.rst
docs/chapters/code/: CMakeLists.txt  about_osm_sample.osm  fromAtoB.sql  osm2pgroutingOutput.txt  osm_sample.osm
docs/chapters/solutions/: CMakeLists.txt  ad-10.txt  ad-7.txt  ad-8.txt  ad_problems.sql  advanced_problems.sql  advancedsaveForQgis.sql  ch7-e1.txt  ch7-e3.txt  ch7-e5.txt  ch7-e6.txt  ch7-e8.txt  ch8-e1.txt  cost_manipulation-2.txt  cost_manipulation-3.txt  d-0.txt  d-1.txt  d-2.txt  d-3.txt  d-4.txt  d-5.txt  d-6.txt  d_problems.sql  info-2.txt  landmarks.sql  shortest_problems.sql  w-12.txt  w-13.txt  w-18.txt  wrapper_problems.sql
docs/chapters/un_sdg/: chapter_1_introduction.rst  chapter_1_sdg1.rst  chapter_3_sdg3.rst  chapter_4_sdg11.rst
docs/examples/: CMakeLists.txt  appendix-4.rst  boost_dijkstra.rst  hanoslav.rst  wiki_example.rst
docs/general-intro/: CMakeLists.txt  chapter-1.rst  chapter-2.rst  chapter-3.rst  introduction.rst  osgeolive.rst  overview.rst
docs/general-intro/images/: CMakeLists.txt
docs/getting-started/: chapter-3.rst
docs/i18n/pot/: index.pot  latex.pot
docs/images/: CMakeLists.txt  _dsZWQsq  network.pngw
docs/images/introduction/: CMakeLists.txt
docs/images/logos/: CMakeLists.txt
docs/images/osgeolive/: CMakeLists.txt
docs/interactions/: CMakeLists.txt  chapter-10.rst  chapter-11.rst  chapter-9.rst
docs/interactions/chap_QGIS/: CMakeLists.txt
docs/interactions/code/: CMakeLists.txt  create-test.sh  functions.sql  ol-routing-base.html  ol-routing-final.html  osm2pgroutingOutput.txt  osm2pgroutingVersion.txt
docs/interactions/images/: CMakeLists.txt
docs/scripts/: CMakeLists.txt
docs/scripts/basic/: CMakeLists.txt
docs/scripts/chapter_4/: CMakeLists.txt  section-4.1.1.sh  section-4.2.2.sh  section-4.3.1.sh
docs/scripts/chapter_5/: CMakeLists.txt  all_exercises_5.sql  images.sql  section-5.1.1.sql  section-5.1.2.sql  section-5.1.3.sql  section-5.1.4.sql  section-5.1.sh  section-5.1.sql  section-5.2.1.sql  section-5.2.2.sql
docs/scripts/chapter_6/: CMakeLists.txt  section-6.1.sql
docs/scripts/chapter_7/: CMakeLists.txt  all_sections.sql  section_7_1.sql
docs/scripts/chapter_8/: CMakeLists.txt  all-sections-8.sql
docs/scripts/configuration/: CMakeLists.txt  osmid_configuration.sql
docs/scripts/get_data/: CMakeLists.txt  get_all_data.sh  get_bangladesh_data.sh  get_mumbai_data.sh  get_osgeolive_data.sh  osgeolive_data.sh  process_osgeolive_data.sh
docs/scripts/un_sdg/: CMakeLists.txt  all_exercises_sdg1.sql  all_exercises_sdg1.txt  buildings.xml  buildings_population_calculation.txt  city.xml  count_roads.txt  count_roads_and_buildings.txt  create_mumbai.sh  create_mumbai.txt  get_mumbai.sh  import_mumbai.sh  import_mumbai_buildings.sh  import_mumbai_roads.sh  import_mumbai_roads.txt  mumbai.sh  mumbai_buildings.xml  mumbai_roads.xml  output_all_exercises_sdg1.txt  road_population.sql  setting_search_path.txt  waterways.xml
docs/source/: conf.py  index.rst  latex.rst
docs/source/_static/: custom.css  my-styles.css
docs/source/_templates/: layout.html
docs/source/chapters/: SQLfunction.rst  about.rst  additional-installation.rst  additional_installation.rst  advanced.rst  (+23 more)
docs/un_sdg/: Appendix_SDG.rst  CMakeLists.txt  appendix.rst  appendix_sdg.rst  chapter_1_introduction.rst  chapter_2_get_data.rst  chapter_3_sdg3.rst  chapter_4_sdg11.rst  chapter_5_sdg11.rst  chapter_5_sdg7.rst  chapter_get_data_SDG11.rst  data.rst  introduction.rst  sdg11-cities.rst  sdg3-health.rst  sdg7-energy.rst
docs/workshop-theme/: theme.conf
scripts/: CMakeLists.txt  create-db.sh  section-4.3.1.sh  section-4.3.2.sh
scripts/chapter_4/: CMakeLists.txt  section-4.1.1.sh
(+1848 files in other folders)
